Sat Jan 31 23:14:00 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* builtin.c (format_tree): For '%s', don't count the multibyte
	characters if we are just copying all the characters. Gives
	big speedup. Thanks to  Hirofumi Saito <hi_saito@yk.rim.or.jp>
	for reporting the problem.

Thu Jan 29 21:14:30 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* field.c (parse_field, re_parse_field, def_parse_field,
	posix_def_parse_field, null_parse_field, sc_parse_field,
	fw_parse_field): Add new last arg `in_middle'.  Ignored by all
	except re_parse_field.
	(re_parse_field): Enhance logic to only allow ^ in a regex to match
	if indeed at the beginning of a record.
	(getfield): Adjust call to parse_field.

Tue Jan 27 21:42:47 2009  Arnold D. Robbins  <arnold@skeeve.com>

	Changes suggested by Toni Schilling <Schilling@equicon.de>,
	as modified by feedback from Pat Rankin, and some help
	from me.

	* awk.h [WEXITSTATUS]: Improve definition for MSC and VMS.
	[EXIT_SUCCESS, EXIT_FAILURE]: Define if they aren't.
	* io.c, main.c, profile.c: Switch to using EXIT_xxx instead of
	0 and 1.
	(main): Use constants instead of 0/1 for exit_val variable.
	* eval.c (interpret): Map exit value from `exit' statement into
	success / fail constants for VMS for exit_val variable.

Tue Jan 20 07:35:34 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* regex.h: Define __USE_GNU if not _LIBC; needed for non-GLIBC
	systems such as, oh say, Mac OS X.

Tue Jan 13 09:23:40 2009  Arnold D. Robbins  <arnold@skeeve.com>

	* regex.c, regex_internal.h: Remove some changes that are no
	longer needed after sync with GLIBC.

Mon Jan 12 22:27:10 2009  Arnold D. Robbins  <arnold@skeeve.com>

	Bi-annual sync with GLIBC.

	* regexec.c, regex.h, regex_internal.c, regcomp.c, regex_internal.h,
	regex.c: Reapply any portability patches specific to gawk.
	* getopt.c: Sync with GLIBC.

	Base versions:
		getopt.c		1.57	Thu Jan  8 20:02:05 2009		
		getopt.h		1.21	Fri Mar 19 00:19:32 2004		